<resources>
    <string name="app_name">LostAndFound</string>
    <string name="username">Username:</string>
    <string name="name">name</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">REGISTER</string>
    <string name="register_act1">REGISTER</string>
    <string name="name_act2">Name:</string>
    <string name="roll_no_act2">Roll No.:</string>
    <string name="email_id_act2">email id:</string>
    <string name="password_act2">Password:</string>
    <string name="confirm_password_act2">Confirm Password:</string>
    <string name="phone_act2">Phone:</string>
    <string name="upload_profile_picture_act2">UPLOAD PROFILE PICTURE</string>
    <string name="submit_act2">SUBMIT</string>
    <string name="forgot_password_act1">Forgot password?</string>
    <string name="forgot_password_act3">FORGOT PASSWORD</string>
    <string name="password_act1">Password:</string>
    <string name="email_id_act1">email id:</string>
    <string name="post_for_lost_item">POST FOR LOST ITEM</string>
    <string name="phone">Phone:</string>
    <string name="where_lost_lostitemact">Where lost:</string>
    <string name="name_lostitemact">Name:</string>
    <string name="message_lostitemact">Message:</string>
    <string name="upload_images_lostitemact">UPLOAD IMAGES</string>
    <string name="submit_lostitemact">SUBMIT</string>
    <string name="post_for_found_item">POST FOR FOUND ITEM</string>
    <string name="where_found">Where found:</string>
</resources>