<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="123dp"
        android:layout_height="30dp"
        android:text="@string/register_act1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name_act2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.085"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/roll_no_act2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.025"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email_id_act2"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.025"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password_act2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.025"

        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/confirm_password_act2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.025"

        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phone_act2"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.025"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button4"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:text="@string/upload_profile_picture_act2"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/button5"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:text="@string/submit_act2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>