<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostLostItem">

    <TextView
        android:id="@+id/postLostItemHeading"
        android:layout_width="248dp"
        android:layout_height="29dp"
        android:text="@string/post_for_lost_item"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/NameLostItem"
        android:layout_width="375dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_lostitemact"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postLostItemHeading"
        app:layout_constraintVertical_bias="0.075"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/LostItemPhone"
        android:layout_width="375dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameLostItem"
        app:layout_constraintVertical_bias="0.034"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/WhereLostInfo"
        android:layout_width="376dp"
        android:layout_height="111dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/where_lost_lostitemact"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LostItemPhone"
        app:layout_constraintVertical_bias="0.045"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/MsgLostItem"
        android:layout_width="375dp"
        android:layout_height="159dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_lostitemact"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhereLostInfo"
        app:layout_constraintVertical_bias="0.075"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/UploadLostItemImgs"
        android:layout_width="373dp"
        android:layout_height="52dp"
        android:text="@string/upload_images_lostitemact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MsgLostItem"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/submitLostItem"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:text="@string/submit_lostitemact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadLostItemImgs" />
</androidx.constraintlayout.widget.ConstraintLayout>